AC_INIT(include/acl.h)
AC_CONFIG_HEADER(include/config.h)
AC_PREFIX_DEFAULT(/usr)

AC_ARG_ENABLE(shared,
[ --enable-shared=[yes/no] Enable use of shared libraries [default=yes]],,
	enable_shared=yes)
AC_SUBST(enable_shared)

AC_ARG_ENABLE(gettext,
[ --enable-gettext=[yes/no] Enable alternate language support [default=yes]],,
	enable_gettext=yes)
AC_SUBST(enable_gettext)

AC_ARG_ENABLE(lib64,
[ --enable-lib64=[yes/no] Enable lib64 support [default=no]],,
	enable_lib64=no)
AC_SUBST(enable_lib64)

AC_PACKAGE_GLOBALS(acl)
AC_PACKAGE_UTILITIES(acl)
AC_PACKAGE_NEED_ATTR_XATTR_H
AC_PACKAGE_NEED_ATTR_ERROR_H
AC_MULTILIB($enable_lib64)
AC_PACKAGE_NEED_GETXATTR_LIBATTR
AC_MANUAL_FORMAT

AC_FUNC_GCC_VISIBILITY

AC_OUTPUT(include/builddefs)
