AC_INIT(include/dmapi.h)
AC_CONFIG_AUX_DIR([.])
AC_CONFIG_MACRO_DIR([m4])
AC_PREFIX_DEFAULT(/usr)

AC_PROG_LIBTOOL

AC_ARG_ENABLE(shared,
[ --enable-shared=[yes/no] Enable use of shared libraries [default=yes]],,
	enable_shared=yes)
AC_SUBST(enable_shared)

AC_ARG_ENABLE(lib64,
[ --enable-lib64=[yes/no] Enable lib64 support [default=no]],,
	enable_lib64=no)
AC_SUBST(enable_lib64)

AC_PACKAGE_GLOBALS(dmapi)
AC_PACKAGE_UTILITIES(dmapi)
AC_PACKAGE_NEED_XFS_HANDLE_H
AC_MANUAL_FORMAT
AC_MULTILIB($enable_lib64)

AC_OUTPUT(include/builddefs)
